--- a/DSolve/resources/data/testGroup/3.小儿脑肿瘤.html
+++ b/DSolve/resources/data/testGroup/3.小儿脑肿瘤.html
@@ -549,8 +549,8 @@
 					<div class="para" label-module="para">大多呈现一慢性或亚急性进行性加重临床过程，可将其临床表现归类为颅类为颅内高压和肿瘤局灶症状两类：</div>
 					<div class="anchor-list">
 						<a name="2_2" class="lemma-anchor para-title"></a> <a
-							name="sub1177589_2_2" class="lemma-anchor "></a> <a
-							name="颅内高压症状" class="lemma-anchor "></a>
+							name="sub1177589_2_2" class="lemma-anchor "></a> <a name="颅内高压症状"
+							class="lemma-anchor "></a>
 					</div>
 					<div class="para-title level-3" label-module="para-title">
 						<h3 class="title-text">
