--- a/DSolve/resources/data/癌症肿瘤词条/100.淋巴瘤.html
+++ b/DSolve/resources/data/癌症肿瘤词条/100.淋巴瘤.html
@@ -535,39 +535,31 @@ lymphoma
 <div class="main-content">
 <div class="main_tab main_tab-defaultTab  curTab">
 <div class="lemmaWgt-lemmaCatalog">
-<div class="lemma-catalog">
-<h2 class="block-title">目录</h2>
-<div class="catalog-list column-3">
-<ol>
-<li class="level1">
-<span class="index">1</span>
-<span class="text"><a href="#1">病因</a></span>
-</li>
-<li class="level1">
-<span class="index">2</span>
-<span class="text"><a href="#2">临床表现</a></span>
-</li>
-</ol><ol><li class="level1">
-<span class="index">3</span>
-<span class="text"><a href="#3">检查</a></span>
-</li>
-<li class="level1">
-<span class="index">4</span>
-<span class="text"><a href="#4">诊断</a></span>
-</li>
-</ol><ol><li class="level1">
-<span class="index">5</span>
-<span class="text"><a href="#5">治疗</a></span>
-</li>
-<li class="level1">
-<span class="index">6</span>
-<span class="text"><a href="#6">预后</a></span>
-</li>
-</ol>
+							<div class="lemma-catalog">
+								<h2 class="block-title">目录</h2>
+								<div class="catalog-list column-3">
+									<ol>
+										<li class="level1"><span class="index">1</span> <span
+											class="text"><a href="#1">病因</a></span></li>
+										<li class="level1"><span class="index">2</span> <span
+											class="text"><a href="#2">临床表现</a></span></li>
+									</ol>
+									<ol>
+										<li class="level1"><span class="index">3</span> <span
+											class="text"><a href="#3">检查</a></span></li>
+										<li class="level1"><span class="index">4</span> <span
+											class="text"><a href="#4">诊断</a></span></li>
+									</ol>
+									<ol>
+										<li class="level1"><span class="index">5</span> <span
+											class="text"><a href="#5">治疗</a></span></li>
+										<li class="level1"><span class="index">6</span> <span
+											class="text"><a href="#6">预后</a></span></li>
+									</ol>
 
-</div>
-</div>
-</div>
+								</div>
+							</div>
+						</div>
 <h2 class="headline-1 custom-title ">
 <span class="headline-content">基本信息</span>
 </h2><div class="basic-info cmn-clearfix">
